--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 baseurl: '/'
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'Olympus Logic'
 
 logo:
-  mobile: "images/logo/logo-mobile.svg"
+  mobile: "/MiniLogo copy.svg"
   mobile_height: "32px"
   mobile_width: "32px"
-  desktop: "images/logo/logo.svg"
+  desktop: "/MiniLogo copy.svg"
   desktop_height: "32px"
   desktop_width: "120px"
 
